# minecraft_server_status

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  readme.typ  requirements.txt
.github/workflows/: on tag deploy on GitHub.yaml  on tag deploy on github.yaml  on tag release on Github.yaml  on-tag-create-release.yaml
src/: config.rs  convert_to_ip_global.py  convert_to_ip_public.py  discord_bot.rs  domain_or_ip.rs  error.rs  main.py  main.rs  main_inner.rs  main_outer.py  rich_presence.rs
