[package]
authors     = ["9-FS <pray4spam@googlemail.com>"]
categories  = []
description = ""
edition     = "2021"
exclude     = [".github/", "readme.pdf"]                        # additional to .gitignore
keywords    = []
license     = "MIT"
name        = "minecraft_server_status"
readme      = "readme.md"
repository  = "https://github.com/9-FS/minecraft_server_status"
version     = "3.0.1"

[dependencies]
async-minecraft-ping = "^0.8.0"
load_config = { git = "https://github.com/9-FS/load_config", tag = "1.0.0", features = [
    "toml_file",
] }
log = "^0.4.0"
scaler = "^1.0.0"
serde = { version = "^1.0.0", features = ["derive"] }
serenity = { version = "^0.12.0", default-features = false, features = [
    "builder",
    "client",
    "gateway",
    "rustls_backend",
] }
setup_logging = { git = "https://github.com/9-FS/setup_logging", tag = "2.1.0" }
tokio = { version = "^1.40.0", features = ["rt-multi-thread"] }
