[tool.poetry]
authors     = ["9FS <pray4spam@googlemail.com>"]
description = ""
license     = "MIT"
name        = "x"
readme      = "readme.md"
repository  = "https://github.com/9-FS/2023-05-07-Minecraft-Server-Status-for-Discord"
version     = "2.0.0"

[tool.poetry.dependencies]
aiohttp   = "^3.8.5"
discord   = "^2.3.2"
kfsconfig = "^1.0.0"
kfsfstr   = "^1.0.1"
kfslog    = "^1.0.0"
mcstatus  = "^11.0.1"
python    = "^3.11.0"
requests  = "^2.31.0"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.87.0"
pytest     = "^7.4.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
